# strava-for-cycling-infrastructure

./: .gitattributes  .gitignore  README.md  pyproject.toml
results/datasets/: infrastructure_grid_final_run.csv  infrastructure_grid_initial_run.csv
results/model_checkpoints/: FCNN_best_model_weights_sweep_11031850.pth  FCNN_best_test_mae_11031850.json
scripts/: matching_strava_infrastructure.py  stravaedge_counter_tessalation_association.py  total_edge_counter_merged_dataset.py  total_strava_enhanced_dataset.py  training_testing_dataset.py
scripts/network_training/: sweep.py
scripts/notebooks/: extrapolating_strava.ipynb  figure_3.ipynb  total_dataset_analysis.ipynb
scripts/preprocessing/: add_location_to_strava_total.py  bike_infrastructure.py  brussels_tessalation.py  counter_information.py  merged_strava.py  strava_shape.py  weather_dataset_creation.py
src/: aux_utilities.py  geospatial_utilities.py  loading_datasets.py  network.py  network_datasets.py  plotting_utilities.py
