[project]
name = "strava-for-cycling-infrastructure"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Core data
    "numpy==1.26.0",
    "pandas==2.2.1",
    "scipy==1.13.0",
    "scikit-learn==1.4.2",
    
    # Geospatial
    "geopandas==0.14.4",
    "shapely==2.0.5",
    "fiona==1.9.5",
    "pyproj==3.6.1",
    "rasterio==1.4.3",
    "cartopy==0.25.0",
    "folium==0.14.0",
    "contextily==1.6.2",
    "mercantile==1.2.1",
    "rtree==1.0.1",
    "geopy==2.4.1",
    "great-circle-calculator==1.3.1",
    
    # Spatial analysis
    "libpysal==4.12.1",
    "mapclassify==2.5.0",
    "momepy==0.8.0",
    
    # Visualization
    "matplotlib==3.10.8",
    "matplotlib-scalebar==0.9.0",
    "matplotlib-map-utils==3.1.1",
    "seaborn==0.13.2",
    "pillow==10.3.0",
    "altair==5.5.0",
    
    # Streamlit
    "streamlit==1.48.1",
    "streamlit-folium==0.25.1",
    "pydeck==0.8.0",
    
    # PyTorch CUDA 12.1
    "torch==2.2.2+cu121",
    "torchvision==0.17.2+cu121",
    "torchaudio==2.2.2+cu121",
    
    # Network/graph
    "networkx==3.1",
    
    # Data formats
    "pyarrow==19.0.0",
    "beautifulsoup4==4.12.3",
    
    # Utils
    "requests==2.31.0",
    "click==8.1.7",
    "tqdm==4.66.4",
    "joblib==1.4.0",
    "pyyaml==6.0.1",
    "python-dotenv==1.2.1",
    "pydantic==2.8.2",
    "holidays==0.72",
    
    # Jupyter
    "ipykernel",
    "ipywidgets==8.1.5",
    
    # Tracking
    "wandb==0.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }